--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "get a random number in a given range",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha './*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,13 @@
     "range"
   ],
   "author": "Adam Borowski",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^3.11.1",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
+    "expect": "^1.20.2",
+    "mocha": "^3.2.0"
+  }
 }
